[gd_scene load_steps=2 format=2]

[ext_resource path="res://Player/Controle_dialogo.gd" type="Script" id=1]

[node name="Controlador_dialogo" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = -1.0
margin_right = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="caixa_dialogo" type="ColorRect" parent="."]
margin_left = 132.0
margin_top = 18.0
margin_right = 178.0
margin_bottom = 29.0
color = Color( 0.0627451, 0.0588235, 0.0588235, 0.878431 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texto" type="RichTextLabel" parent="caixa_dialogo"]
anchor_right = 0.992
anchor_bottom = 0.941
margin_left = 1.0
margin_top = 1.0
margin_right = 131.368
margin_bottom = 26.649
rect_scale = Vector2( 0.25, 0.25 )
custom_colors/default_color = Color( 1, 0.992157, 0.992157, 1 )
tab_size = 0
scroll_active = false
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="caixa_dialogo"]

[connection signal="tween_completed" from="caixa_dialogo/Tween" to="." method="_on_Tween_tween_completed"]
